--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,12 @@
-<div class="container">
-  <app-side-menu></app-side-menu>
-  <router-outlet></router-outlet>
-</div>
+<mat-toolbar> Responsive side navigation </mat-toolbar>
+
+<mat-sidenav-container>
+  <mat-sidenav> </mat-sidenav>
+  <mat-sidenav-content>
+    <div class="content mat-elevation-z8">
+      <div class="container">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
