--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar> Responsive side navigation </mat-toolbar>
+<!-- <mat-toolbar> Responsive side navigation </mat-toolbar>
 
 <mat-sidenav-container>
   <mat-sidenav> </mat-sidenav>
@@ -9,4 +9,61 @@
       </div>
     </div>
   </mat-sidenav-content>
+</mat-sidenav-container> -->
+
+<!-- <mat-sidenav-container class="sidenav-container">
+  <mat-sidenav
+    #drawer
+    class="sidenav"
+    fixedInViewport
+    [attr.role]="'navigation'"
+    [mode]="'side'"
+    [opened]="true"
+  >
+    <mat-toolbar color="primary">Menu</mat-toolbar>
+    <mat-nav-list>
+      <a mat-list-item href="#">Opção 1</a>
+      <a mat-list-item href="#">Opção 2</a>
+      <a mat-list-item href="#">Opção 3</a>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <mat-toolbar color="primary">
+      <span>Título da página</span>
+    </mat-toolbar>
+  </mat-sidenav-content>
+</mat-sidenav-container> -->
+
+<mat-sidenav-container class="sidenav-container">
+  <mat-toolbar color="primary">
+    <button
+      type="button"
+      aria-label="Toggle sidenav"
+      mat-icon-button
+      (click)="drawer.toggle()"
+    >
+      <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+    </button>
+    <span>Título da página</span>
+  </mat-toolbar>
+
+  <mat-sidenav
+    #drawer
+    class="sidenav"
+    fixedInViewport
+    [mode]="'side'"
+    [opened]="false"
+  >
+    <mat-toolbar color="primary">Menu</mat-toolbar>
+    <mat-nav-list>
+      <a mat-list-item href="#">Opção 1</a>
+      <a mat-list-item href="#">Opção 2</a>
+      <a mat-list-item href="#">Opção 3</a>
+    </mat-nav-list>
+  </mat-sidenav>
+
+  <!-- Conteúdo da página aqui -->
+  <div class="content mat-elevation-z8">
+    <router-outlet></router-outlet>
+  </div>
 </mat-sidenav-container>
