--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,69 +1,30 @@
-<!-- <mat-toolbar> Responsive side navigation </mat-toolbar>
-
-<mat-sidenav-container>
-  <mat-sidenav> </mat-sidenav>
-  <mat-sidenav-content>
-    <div class="content mat-elevation-z8">
-      <div class="container">
-        <router-outlet></router-outlet>
-      </div>
-    </div>
-  </mat-sidenav-content>
-</mat-sidenav-container> -->
-
-<!-- <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav
-    #drawer
-    class="sidenav"
-    fixedInViewport
-    [attr.role]="'navigation'"
-    [mode]="'side'"
-    [opened]="true"
-  >
-    <mat-toolbar color="primary">Menu</mat-toolbar>
+<mat-sidenav-container class="sidenav-container">
+  <mat-sidenav #drawer mode="side" class="sidenav" fixedInViewport="true">
+    <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Opção 1</a>
-      <a mat-list-item href="#">Opção 2</a>
-      <a mat-list-item href="#">Opção 3</a>
+      <a mat-list-item routerLink="/login">Login</a>
+      <a mat-list-item routerLink="/profile">Profile</a>
+      <a mat-list-item routerLink="/register">Register</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
-      <span>Título da página</span>
+      <button
+        type="button"
+        aria-label="Toggle sidenav"
+        mat-icon-button
+        (click)="drawer.toggle()"
+      >
+        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+      </button>
+
+      <button mat-button [matMenuTriggerFor]="menu2">Deybson.Ferreira</button>
+      <mat-menu #menu2="matMenu">
+        <button mat-menu-item>Perfil</button>
+        <button mat-menu-item>Sair</button>
+      </mat-menu>
     </mat-toolbar>
-  </mat-sidenav-content>
-</mat-sidenav-container> -->
-
-<mat-sidenav-container class="sidenav-container">
-  <mat-toolbar color="primary">
-    <button
-      type="button"
-      aria-label="Toggle sidenav"
-      mat-icon-button
-      (click)="drawer.toggle()"
-    >
-      <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-    </button>
-    <span>Título da página</span>
-  </mat-toolbar>
-
-  <mat-sidenav
-    #drawer
-    class="sidenav"
-    fixedInViewport
-    [mode]="'side'"
-    [opened]="false"
-  >
-    <mat-toolbar color="primary">Menu</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item href="#">Opção 1</a>
-      <a mat-list-item href="#">Opção 2</a>
-      <a mat-list-item href="#">Opção 3</a>
-    </mat-nav-list>
-  </mat-sidenav>
-
-  <!-- Conteúdo da página aqui -->
-  <div class="content mat-elevation-z8">
+    <ng-content> </ng-content>
     <router-outlet></router-outlet>
-  </div>
+  </mat-sidenav-content>
 </mat-sidenav-container>
