--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<mat-toolbar class="color-default">
+<!-- <mat-toolbar class="color-default"> -->
+<mat-toolbar color="primary">
   <mat-toolbar-row>
     <button type="button" mat-icon-button (click)="drawer.toggle()">
       <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
@@ -55,10 +56,10 @@
   </mat-drawer-content>
 </mat-drawer-container>
 
-<footer class="footer mt-auto py-3">
+<footer class="footer ">
   <div class="container">
     <span class="text-muted"
-      >Deybson Ferreira - Desenvolvedor de Sistemas - Senior</span
-    >
+      >Deybson Ferreira - Desenvolvedor de Sistemas - Senior
+    </span>
   </div>
 </footer>
