--- a/src/app/components/dialog/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/components/dialog/confirm-dialog/confirm-dialog.component.html
@@ -1,7 +1,7 @@
-<h1 mat-dialog-title>Confirmação</h1>
-<div mat-dialog-content>
+<mat-dialog-title mat-dialog-title>Confirmação</mat-dialog-title>
+<mat-dialog-content>
   <p>Você tem certeza que deseja salvar as informações?</p>
-</div>
+</mat-dialog-content>
 <div mat-dialog-actions>
   <button mat-button [mat-dialog-close]="true">Sim</button>
   <button mat-button [mat-dialog-close]="false">Não</button>
