--- a/src/app/pages/customers/customers.component.html
+++ b/src/app/pages/customers/customers.component.html
@@ -1,10 +1,15 @@
 <mat-sidenav-container class="page-content">
   <mat-sidenav class="customers-sidenav" #sidenav mode="over" position="end">
-    <app-customers-detail> </app-customers-detail>
+    <app-customers-detail (customerUpdateEvent)="changeCustomer($event)">
+    </app-customers-detail>
   </mat-sidenav>
   <mat-sidenav-content>
     <div class="customers-list">
-      <app-customers-list></app-customers-list>
+      <app-customers-list
+        [costumerSelected]="costumerSelectedFromList"
+        (customerSelectedEvent)="setSelectedCustomer($event)"
+      >
+      </app-customers-list>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
