--- a/src/app/pages/customers/customers-detail/customers-detail.component.html
+++ b/src/app/pages/customers/customers-detail/customers-detail.component.html
@@ -1,7 +1,14 @@
-<mat-card>
+<mat-card *ngIf="customer">
   <mat-card-header>
     <mat-card-title-group>
-      <mat-card-title>Detalhes</mat-card-title>
+      <mat-card-title>
+        <span *ngIf="customerOperation == operation.Update"
+          >Atualizar Dados do cliente
+        </span>
+        <span *ngIf="customerOperation == operation.Create"
+          >Adicionar Dados do cliente
+        </span>
+      </mat-card-title>
     </mat-card-title-group>
   </mat-card-header>
   <mat-card-content>
@@ -21,7 +28,7 @@
     </mat-form-field>
 
     <div class="button-row">
-      <a mat-mini-fab extended color="warn">
+      <a (click)="toggleSidenav()" mat-mini-fab extended color="warn">
         <mat-icon>close</mat-icon>
       </a>
       <a (click)="saveCustomer()" mat-mini-fab extended class="btn-green">
