--- a/src/app/pages/customers/customers-list/customers-list.component.html
+++ b/src/app/pages/customers/customers-list/customers-list.component.html
@@ -1,3 +1,13 @@
+<div class="button-add-customer mt-3">
+  <button
+    (click)="toggleSidenav(); selectNewCustomer()"
+    mat-fab
+    color="primary"
+  >
+    <mat-icon>add</mat-icon>
+  </button>
+</div>
+
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef>Nome</th>
