--- a/src/app/pages/customers/customers-list/customers-list.component.html
+++ b/src/app/pages/customers/customers-list/customers-list.component.html
@@ -29,6 +29,13 @@
       >
         <mat-icon>menu</mat-icon>
       </button>
+      <button
+        mat-icon-button
+        color="primary"
+        (click)="deleteCustomer(element)"
+      >
+        <mat-icon color="warn">close</mat-icon>
+      </button>
     </td>
   </ng-container>
 
