--- a/src/app/components/dialog/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/components/dialog/confirm-dialog/confirm-dialog.component.html
@@ -1,6 +1,6 @@
-<mat-dialog-title mat-dialog-title>Confirmação</mat-dialog-title>
+<mat-dialog-title mat-dialog-title>{{ title }}</mat-dialog-title>
 <mat-dialog-content>
-  <p>Você tem certeza que deseja salvar as informações?</p>
+  <p>{{ text }}</p>
 </mat-dialog-content>
 <div mat-dialog-actions>
   <button mat-button [mat-dialog-close]="true">Sim</button>
