--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,11 +41,11 @@
       <mat-list-item
         (click)="drawer.toggle()"
         class="linkMenu"
-        routerLink="Register"
+        routerLink="products"
         role="listitem"
       >
         <mat-icon aria-hidden="false" aria-label="chat icon">chat</mat-icon>
-        <Label>Contato</Label>
+        <Label>Produtos</Label>
       </mat-list-item>
     </mat-list>
   </mat-drawer>
