--- a/src/app/pages/customers/customers-list/customers-list.component.css
+++ b/src/app/pages/customers/customers-list/customers-list.component.css
@@ -1,3 +1,10 @@
 .button-add-customer {
   float: right;
 }
+
+.customer-page {
+  padding: 10px;
+}
+tr.mat-mdc-footer-row td {
+  font-weight: bold;
+}
