--- a/src/app/pages/customers/customers-list/customers-list.component.html
+++ b/src/app/pages/customers/customers-list/customers-list.component.html
@@ -1,48 +1,75 @@
-<div class="button-add-customer mt-3">
-  <button
-    (click)="toggleSidenav(); selectNewCustomer()"
-    mat-fab
-    color="primary"
+<div class="mat-elevation-z8 customer-page">
+  <h1 class="mat-align-center text-primary text-center">
+    Gerenciar Clientes
+    <button
+      class="button-add-customer"
+      (click)="toggleSidenav(); selectNewCustomer()"
+      mat-fab
+      color="primary"
+    >
+      <mat-icon>add</mat-icon>
+    </button>
+  </h1>
+  <mat-divider></mat-divider>
+
+  <div class="w-100 item-center">
+    <mat-form-field class="w-50" appearance="fill">
+      <mat-label>Pesquisar....</mat-label>
+      <input
+        (keyup)="searchDatasource($event)"
+        matInput
+        placeholder="digite..."
+      />
+      <mat-icon matSuffix>search</mat-icon>
+    </mat-form-field>
+  </div>
+
+  <table mat-table [dataSource]="dataSource">
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Nome</th>
+      <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+      <td mat-footer-cell *matFooterCellDef>
+        Total :{{ getTotalCustomers() }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="lastname">
+      <th mat-header-cell *matHeaderCellDef>Sobrenome</th>
+      <td mat-cell *matCellDef="let row">{{ row.lastname }}</td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+
+    <ng-container matColumnDef="openDetail">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element">
+        <button
+          mat-icon-button
+          color="primary"
+          (click)="toggleSidenav(); selectCustomer(element)"
+        >
+          <mat-icon>menu</mat-icon>
+        </button>
+        <button
+          mat-icon-button
+          color="primary"
+          (click)="deleteCustomer(element)"
+        >
+          <mat-icon color="warn">close</mat-icon>
+        </button>
+      </td>
+      <td mat-footer-cell *matFooterCellDef></td>
+    </ng-container>
+
+    <!-- ... additional column definitions ... -->
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <!-- <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr> -->
+  </table>
+
+  <mat-paginator
+    [hidePageSize]="true"
+    [pageSizeOptions]="[5, 10, 100]"
+    showFirstLastButtons="false"
   >
-    <mat-icon>add</mat-icon>
-  </button>
+  </mat-paginator>
 </div>
-
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>Nome</th>
-    <td mat-cell *matCellDef="let row">{{ row.name }}</td>
-  </ng-container>
-
-  <ng-container matColumnDef="lastname">
-    <th mat-header-cell *matHeaderCellDef>Sobrenome</th>
-    <td mat-cell *matCellDef="let row">{{ row.lastname }}</td>
-  </ng-container>
-
-  <ng-container matColumnDef="openDetail">
-    <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let element">
-      <button
-        mat-icon-button
-        color="primary"
-        (click)="toggleSidenav(); selectCustomer(element)"
-      >
-        <mat-icon>menu</mat-icon>
-      </button>
-      <button
-        mat-icon-button
-        color="primary"
-        (click)="deleteCustomer(element)"
-      >
-        <mat-icon color="warn">close</mat-icon>
-      </button>
-    </td>
-  </ng-container>
-
-  <!-- ... additional column definitions ... -->
-
-  <!-- Table Header -->
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <!-- Table Body -->
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
