--- a/src/app/pages/customers/customers-detail/customers-detail.component.css
+++ b/src/app/pages/customers/customers-detail/customers-detail.component.css
@@ -1,6 +1,7 @@
 .form-full-width {
   width: 100%;
 }
+
 .button-row {
   float: right;
 }
@@ -11,4 +12,12 @@
 
 mat-form-field {
   margin-bottom: -1em;
+}
+
+mat-expansion-panel-header {
+  background-color: #673ab7 !important;
+}
+
+mat-expansion-panel-header:hover {
+  background-color: #7d4dd1 !important;
 }
